# cv-hough-transform

./: .gitignore  Cargo.toml  Line Detection using Hough Transform.docx  README.md  data_generator.py  generation_utilities.py  hough_lines.py  init.cmd  lorem_ipsum.txt  makereadme.cmd  playground.py  pyproject.toml  random_paper_study.ipynb  sandbox.ipynb  solution.py  study_1_hough_transform.ipynb  study_2_hough_transform.ipynb  study_implementation.ipynb  study_random_paper.ipynb
src/hough_transform/: __init__.py  data_generator.py  hough_lines.py  playground.py
src/rusty_hough/: lib.rs
test/: test_hough_lines.py  test_rusty_hough.py
